--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   </head>
   <body>
     <header class="header">
-      <a href="index.html"><img src="./img/cat.jpg" class="header__logo" /></a>
+      <a href="./"><img src="./img/cat.jpg" class="header__logo" /></a>
       <div class="menu">
-        <a class="menu__item menu__item--active" href="./index.html">Główna</a>
+        <a class="menu__item menu__item--active" href="./">Główna</a>
         <a class="menu__item" href="./o-mnie.html">O mnie</a>
         <a class="menu__item" href="./wolne-terminy.html">Wolne terminy</a>
         <a class="menu__item" href="./kontakt.html">Kontakt</a>
@@ -27,7 +27,7 @@
       <div class="hero">
         <div class="hero__text">
           <h2 class="heading">Cześć!</h2>
-          <p>
+          <p class="text">
             Mam na imię Kasia. Jestem studentką, więc trud nauki nie jest mi
             obcy. Jeśli masz awersję do nauczycieli, a specjaliści z wieloletnim
             doświadczeniem zanudzili cię już na śmierć, to dobrze trafiłeś! Ja
@@ -35,9 +35,9 @@
             skomplikowane sprawy wyjaśniać jak najprościej i odczarować
             wszystkie trudne słowa. Rodzaje komizmu tłumaczę na przykładzie
             „Shreka”, a problemy z ortografią w szybki sposób rozwiązujemy
-            rysując :)
+            dzięki rysowaniu obrazków.
           </p>
-          <p>
+          <p class="text">
             Rozprawiamy się też z rozprawką :) Zaczynamy od przyjrzenia się
             przykładowym rozprawkom innych uczniów, następnie omawiamy
             poszczególne etapy tworzenia pracy i dopiero wtedy przechodzimy do
