--- a/o-mnie.html
+++ b/o-mnie.html
@@ -15,9 +15,9 @@
   </head>
   <body>
     <header class="header">
-      <a href="index.html"><img src="./img/cat.jpg" class="header__logo" /></a>
+      <a href="./"><img src="./img/cat.jpg" class="header__logo" /></a>
       <div class="menu">
-        <a class="menu__item" href="./index.html">Główna</a>
+        <a class="menu__item" href="./">Główna</a>
         <a class="menu__item menu__item--active" href="./o-mnie.html">O mnie</a>
         <a class="menu__item" href="./wolne-terminy.html">Wolne terminy</a>
         <a class="menu__item" href="./kontakt.html">Kontakt</a>
